refactor: implement 5-layer prompt assembly architecture with static/dynamic categorization